package pl.petgo.backend.dto.dog;

public record BreedDto(
        String breedCode,
        String name) {
}
