erDiagram
    USERS {
        SERIAL user_id PK
        TEXT email
        TEXT username
        TEXT password_hash
        TEXT first_name
        TEXT last_name
        DATE date_of_birth
        TEXT role
        BOOLEAN is_active
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    BREEDS {
        VARCHAR breed_code PK
        VARCHAR name
    }

    DOGS {
        SERIAL dog_id PK
        INT owner_id FK
        VARCHAR breed_code FK
        TEXT name
        TEXT size
        TEXT notes
        NUMERIC weight_kg
        BOOLEAN is_active
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    DOG_PHOTOS {
        SERIAL photo_id PK
        INT dog_id FK
        TEXT url
        TIMESTAMPTZ uploaded_at
    }

    ADDRESSES {
        SERIAL address_id PK
        INT user_id FK
        TEXT label
        TEXT home_number
        DOUBLE latitude
        DOUBLE longitude
        TEXT city
        TEXT street
        TEXT zipcode
        TIMESTAMPTZ created_at
    }

    RESERVATIONS {
        SERIAL reservation_id PK
        INT dog_id FK
        INT walker_id FK
        INT offer_id FK
        INT owner_id FK
        TIMESTAMPTZ scheduled_start
        TIMESTAMPTZ scheduled_end
        TEXT status
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    OFFERS {
        SERIAL offer_id PK
        INT walker_id FK
        TEXT description
        INT price_cents
        TEXT status
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    PAYMENTS {
        SERIAL payment_id PK
        INT reservation_id FK
        INT payer_id FK
        INT payee_id FK
        INT amount_cents
        TEXT currency
        TEXT status
        TEXT provider_ref
        TIMESTAMPTZ created_at
    }

    REVIEWS {
        SERIAL review_id PK
        INT reservation_id FK
        INT author_id FK
        INT subject_user_id FK
        INT dog_id FK
        TEXT review_type
        INT rating
        TEXT comment
        TIMESTAMPTZ created_at
    }

    DOMAIN_EVENTS {
        SERIAL event_id PK
        TEXT type
        TEXT description
        JSONB metadata_json
        TIMESTAMPTZ occurred_at
        INT actor_id FK
        INT target_user_id FK
        INT target_dog_id FK
        INT target_reservation_id FK
        INT target_wallet_id FK
        INT target_transaction_id FK
        INT target_payment_id FK
    }

    WALLETS {
        SERIAL wallet_id PK
        INT user_id FK
        TEXT currency
        BIGINT balance_cents
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
        BIGINT version
    }

    TRANSACTIONS {
        SERIAL transaction_id PK
        INT wallet_id FK
        INT user_id FK
        BIGINT amount_cents
        BIGINT balance_after_cents
        TEXT type
        TEXT description
        TEXT provider_ref
        INT reservation_id FK
        TIMESTAMPTZ created_at
    }

    CHATS {
        SERIAL chat_id PK
        INT reservation_id FK
        TIMESTAMPTZ created_at
    }

    CHAT_MESSAGES {
        SERIAL message_id PK
        INT chat_id FK
        INT sender_id FK
        TEXT content
        TIMESTAMPTZ sent_at
    }

    GPS_SESSIONS {
        SERIAL session_id PK
        INT reservation_id FK
        TIMESTAMPTZ started_at
        TIMESTAMPTZ stopped_at
    }

    GPS_POINTS {
        SERIAL point_id PK
        INT session_id FK
        DOUBLE latitude
        DOUBLE longitude
        TIMESTAMPTZ recorded_at
    }

    AVAILABILITY_SLOTS {
        SERIAL slot_id PK
        INT offer_id FK
        INT reservation_id FK
        TIMESTAMPTZ start_time
        TIMESTAMPTZ end_time
        DOUBLE latitude
        DOUBLE longitude
        TIMESTAMPTZ created_at
    }

    USER_REPORTS {
        SERIAL report_id PK
        INT reporter_id FK
        INT reported_id FK
        TEXT reason
        TEXT details
        TEXT status
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

%% Relationships
    USERS ||--o{ DOGS : owns
    USERS ||--o{ ADDRESSES : has
    USERS ||--o{ RESERVATIONS : books_or_walks

    USERS ||--o| OFFERS : proposes

    USERS ||--o{ PAYMENTS : pays
    USERS ||--o{ REVIEWS : writes
    USERS ||--|| WALLETS : has
    USERS ||--o{ TRANSACTIONS : initiates
    USERS ||--o{ DOMAIN_EVENTS : actor
    USERS ||--o{ CHAT_MESSAGES : sends

    USERS ||--o{ USER_REPORTS : reports
    USERS ||--o{ USER_REPORTS : is_reported

    BREEDS ||--o{ DOGS : classifies
    DOGS ||--o{ DOG_PHOTOS : has
    DOGS ||--o{ RESERVATIONS : booked
    DOGS ||--o{ REVIEWS : reviewed
    DOGS ||--o{ DOMAIN_EVENTS : target

    RESERVATIONS ||--o{ PAYMENTS : paid_for
    RESERVATIONS ||--o{ REVIEWS : reviewed
    RESERVATIONS ||--o{ TRANSACTIONS : linked
    RESERVATIONS ||--o{ DOMAIN_EVENTS : target
    RESERVATIONS ||--o{ GPS_SESSIONS : tracks
    RESERVATIONS ||--|| CHATS : has_chat

    RESERVATIONS ||--o{ AVAILABILITY_SLOTS : occupies

    OFFERS ||--o{ AVAILABILITY_SLOTS : schedules
    OFFERS ||--o{ PAYMENTS : triggers

    WALLETS ||--o{ TRANSACTIONS : logs
    WALLETS ||--o{ DOMAIN_EVENTS : target

    TRANSACTIONS ||--o{ DOMAIN_EVENTS : target
    PAYMENTS ||--o{ DOMAIN_EVENTS : target

    CHATS ||--o{ CHAT_MESSAGES : contains

    GPS_SESSIONS ||--o{ GPS_POINTS : collects